// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dataReshape > 0dimensions 0measure 1`] = `[]`;

exports[`dataReshape > 0dimensions 1measure 1`] = `
[
  {
    "__DimGroupID__": "销售额-sales",
    "__DimGroup__": "销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 100,
    "__OriginalData__": {
      "sales": 100,
    },
    "sales": 100,
  },
]
`;

exports[`dataReshape > 0dimensions 2measure 1`] = `
[
  {
    "__DimGroupID__": "销售额-sales",
    "__DimGroup__": "销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 100,
    "__OriginalData__": {
      "profit": 10,
      "sales": 100,
    },
    "sales": 100,
  },
  {
    "__DimGroupID__": "利润-profit",
    "__DimGroup__": "利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 10,
    "__OriginalData__": {
      "profit": 10,
      "sales": 100,
    },
    "profit": 10,
  },
]
`;

exports[`dataReshape > 1dimensions 0measure 1`] = `[]`;

exports[`dataReshape > 1dimensions 1measure 1`] = `
[
  {
    "__DimGroupID__": "2019-sales",
    "__DimGroup__": "2019",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 100,
    "__OriginalData__": {
      "date": "2019",
      "sales": 100,
    },
    "date": "2019",
    "sales": 100,
  },
  {
    "__DimGroupID__": "2020-sales",
    "__DimGroup__": "2020",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 3200,
    "__OriginalData__": {
      "date": "2020",
      "sales": 3200,
    },
    "date": "2020",
    "sales": 3200,
  },
  {
    "__DimGroupID__": "2021-sales",
    "__DimGroup__": "2021",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 300,
    "__OriginalData__": {
      "date": "2021",
      "sales": 300,
    },
    "date": "2021",
    "sales": 300,
  },
  {
    "__DimGroupID__": "2022-sales",
    "__DimGroup__": "2022",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 2400,
    "__OriginalData__": {
      "date": "2022",
      "sales": 2400,
    },
    "date": "2022",
    "sales": 2400,
  },
  {
    "__DimGroupID__": "2023-sales",
    "__DimGroup__": "2023",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 500,
    "__OriginalData__": {
      "date": "2023",
      "sales": 500,
    },
    "date": "2023",
    "sales": 500,
  },
  {
    "__DimGroupID__": "2019-sales",
    "__DimGroup__": "2019",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 100,
    "__OriginalData__": {
      "date": "2019",
      "sales": 100,
    },
    "date": "2019",
    "sales": 100,
  },
  {
    "__DimGroupID__": "2020-sales",
    "__DimGroup__": "2020",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 3200,
    "__OriginalData__": {
      "date": "2020",
      "sales": 3200,
    },
    "date": "2020",
    "sales": 3200,
  },
  {
    "__DimGroupID__": "2021-sales",
    "__DimGroup__": "2021",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 300,
    "__OriginalData__": {
      "date": "2021",
      "sales": 300,
    },
    "date": "2021",
    "sales": 300,
  },
  {
    "__DimGroupID__": "2022-sales",
    "__DimGroup__": "2022",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 2400,
    "__OriginalData__": {
      "date": "2022",
      "sales": 2400,
    },
    "date": "2022",
    "sales": 2400,
  },
  {
    "__DimGroupID__": "2023-sales",
    "__DimGroup__": "2023",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 500,
    "__OriginalData__": {
      "date": "2023",
      "sales": 500,
    },
    "date": "2023",
    "sales": 500,
  },
]
`;

exports[`dataReshape > 1dimensions 2measure 1`] = `
[
  {
    "__DimGroupID__": "2019-销售额-sales",
    "__DimGroup__": "2019-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 100,
    "__OriginalData__": {
      "date": "2019",
      "profit": 10,
      "sales": 100,
    },
    "date": "2019",
    "sales": 100,
  },
  {
    "__DimGroupID__": "2019-利润-profit",
    "__DimGroup__": "2019-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 10,
    "__OriginalData__": {
      "date": "2019",
      "profit": 10,
      "sales": 100,
    },
    "date": "2019",
    "profit": 10,
  },
  {
    "__DimGroupID__": "2020-销售额-sales",
    "__DimGroup__": "2020-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 3200,
    "__OriginalData__": {
      "date": "2020",
      "profit": 30,
      "sales": 3200,
    },
    "date": "2020",
    "sales": 3200,
  },
  {
    "__DimGroupID__": "2020-利润-profit",
    "__DimGroup__": "2020-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2020",
      "profit": 30,
      "sales": 3200,
    },
    "date": "2020",
    "profit": 30,
  },
  {
    "__DimGroupID__": "2021-销售额-sales",
    "__DimGroup__": "2021-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 300,
    "__OriginalData__": {
      "date": "2021",
      "profit": 30,
      "sales": 300,
    },
    "date": "2021",
    "sales": 300,
  },
  {
    "__DimGroupID__": "2021-利润-profit",
    "__DimGroup__": "2021-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2021",
      "profit": 30,
      "sales": 300,
    },
    "date": "2021",
    "profit": 30,
  },
  {
    "__DimGroupID__": "2022-销售额-sales",
    "__DimGroup__": "2022-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 2400,
    "__OriginalData__": {
      "date": "2022",
      "profit": 50,
      "sales": 2400,
    },
    "date": "2022",
    "sales": 2400,
  },
  {
    "__DimGroupID__": "2022-利润-profit",
    "__DimGroup__": "2022-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 50,
    "__OriginalData__": {
      "date": "2022",
      "profit": 50,
      "sales": 2400,
    },
    "date": "2022",
    "profit": 50,
  },
  {
    "__DimGroupID__": "2023-销售额-sales",
    "__DimGroup__": "2023-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 500,
    "__OriginalData__": {
      "date": "2023",
      "profit": 40,
      "sales": 500,
    },
    "date": "2023",
    "sales": 500,
  },
  {
    "__DimGroupID__": "2023-利润-profit",
    "__DimGroup__": "2023-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 40,
    "__OriginalData__": {
      "date": "2023",
      "profit": 40,
      "sales": 500,
    },
    "date": "2023",
    "profit": 40,
  },
  {
    "__DimGroupID__": "2019-销售额-sales",
    "__DimGroup__": "2019-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 100,
    "__OriginalData__": {
      "date": "2019",
      "profit": 10,
      "sales": 100,
    },
    "date": "2019",
    "sales": 100,
  },
  {
    "__DimGroupID__": "2019-利润-profit",
    "__DimGroup__": "2019-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 10,
    "__OriginalData__": {
      "date": "2019",
      "profit": 10,
      "sales": 100,
    },
    "date": "2019",
    "profit": 10,
  },
  {
    "__DimGroupID__": "2020-销售额-sales",
    "__DimGroup__": "2020-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 3200,
    "__OriginalData__": {
      "date": "2020",
      "profit": 30,
      "sales": 3200,
    },
    "date": "2020",
    "sales": 3200,
  },
  {
    "__DimGroupID__": "2020-利润-profit",
    "__DimGroup__": "2020-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2020",
      "profit": 30,
      "sales": 3200,
    },
    "date": "2020",
    "profit": 30,
  },
  {
    "__DimGroupID__": "2021-销售额-sales",
    "__DimGroup__": "2021-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 300,
    "__OriginalData__": {
      "date": "2021",
      "profit": 30,
      "sales": 300,
    },
    "date": "2021",
    "sales": 300,
  },
  {
    "__DimGroupID__": "2021-利润-profit",
    "__DimGroup__": "2021-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2021",
      "profit": 30,
      "sales": 300,
    },
    "date": "2021",
    "profit": 30,
  },
  {
    "__DimGroupID__": "2022-销售额-sales",
    "__DimGroup__": "2022-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 2400,
    "__OriginalData__": {
      "date": "2022",
      "profit": 50,
      "sales": 2400,
    },
    "date": "2022",
    "sales": 2400,
  },
  {
    "__DimGroupID__": "2022-利润-profit",
    "__DimGroup__": "2022-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 50,
    "__OriginalData__": {
      "date": "2022",
      "profit": 50,
      "sales": 2400,
    },
    "date": "2022",
    "profit": 50,
  },
  {
    "__DimGroupID__": "2023-销售额-sales",
    "__DimGroup__": "2023-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 500,
    "__OriginalData__": {
      "date": "2023",
      "profit": 40,
      "sales": 500,
    },
    "date": "2023",
    "sales": 500,
  },
  {
    "__DimGroupID__": "2023-利润-profit",
    "__DimGroup__": "2023-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 40,
    "__OriginalData__": {
      "date": "2023",
      "profit": 40,
      "sales": 500,
    },
    "date": "2023",
    "profit": 40,
  },
]
`;

exports[`dataReshape > 2dimensions 0measure 1`] = `[]`;

exports[`dataReshape > 2dimensions 1measure 1`] = `
[
  {
    "__DimGroupID__": "2019-商品-profit",
    "__DimGroup__": "2019-商品",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 10,
    "__OriginalData__": {
      "date": "2019",
      "profit": 10,
      "type": "商品",
    },
    "date": "2019",
    "profit": 10,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2020-商品-profit",
    "__DimGroup__": "2020-商品",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2020",
      "profit": 30,
      "type": "商品",
    },
    "date": "2020",
    "profit": 30,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2021-商品-profit",
    "__DimGroup__": "2021-商品",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2021",
      "profit": 30,
      "type": "商品",
    },
    "date": "2021",
    "profit": 30,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2022-商品-profit",
    "__DimGroup__": "2022-商品",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 50,
    "__OriginalData__": {
      "date": "2022",
      "profit": 50,
      "type": "商品",
    },
    "date": "2022",
    "profit": 50,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2023-商品-profit",
    "__DimGroup__": "2023-商品",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 40,
    "__OriginalData__": {
      "date": "2023",
      "profit": 40,
      "type": "商品",
    },
    "date": "2023",
    "profit": 40,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2019-家具-profit",
    "__DimGroup__": "2019-家具",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 10,
    "__OriginalData__": {
      "date": "2019",
      "profit": 10,
      "type": "家具",
    },
    "date": "2019",
    "profit": 10,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2020-家具-profit",
    "__DimGroup__": "2020-家具",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2020",
      "profit": 30,
      "type": "家具",
    },
    "date": "2020",
    "profit": 30,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2021-家具-profit",
    "__DimGroup__": "2021-家具",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2021",
      "profit": 30,
      "type": "家具",
    },
    "date": "2021",
    "profit": 30,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2022-家具-profit",
    "__DimGroup__": "2022-家具",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 50,
    "__OriginalData__": {
      "date": "2022",
      "profit": 50,
      "type": "家具",
    },
    "date": "2022",
    "profit": 50,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2023-家具-profit",
    "__DimGroup__": "2023-家具",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 40,
    "__OriginalData__": {
      "date": "2023",
      "profit": 40,
      "type": "家具",
    },
    "date": "2023",
    "profit": 40,
    "type": "家具",
  },
]
`;

exports[`dataReshape > 2dimensions 2measure 1`] = `
[
  {
    "__DimGroupID__": "2019-商品-销售额-sales",
    "__DimGroup__": "2019-商品-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 100,
    "__OriginalData__": {
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "商品",
    },
    "date": "2019",
    "sales": 100,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2019-商品-利润-profit",
    "__DimGroup__": "2019-商品-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 10,
    "__OriginalData__": {
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "商品",
    },
    "date": "2019",
    "profit": 10,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2020-商品-销售额-sales",
    "__DimGroup__": "2020-商品-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 3200,
    "__OriginalData__": {
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "商品",
    },
    "date": "2020",
    "sales": 3200,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2020-商品-利润-profit",
    "__DimGroup__": "2020-商品-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "商品",
    },
    "date": "2020",
    "profit": 30,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2021-商品-销售额-sales",
    "__DimGroup__": "2021-商品-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 300,
    "__OriginalData__": {
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "商品",
    },
    "date": "2021",
    "sales": 300,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2021-商品-利润-profit",
    "__DimGroup__": "2021-商品-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "商品",
    },
    "date": "2021",
    "profit": 30,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2022-商品-销售额-sales",
    "__DimGroup__": "2022-商品-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 2400,
    "__OriginalData__": {
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "商品",
    },
    "date": "2022",
    "sales": 2400,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2022-商品-利润-profit",
    "__DimGroup__": "2022-商品-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 50,
    "__OriginalData__": {
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "商品",
    },
    "date": "2022",
    "profit": 50,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2023-商品-销售额-sales",
    "__DimGroup__": "2023-商品-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 500,
    "__OriginalData__": {
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "商品",
    },
    "date": "2023",
    "sales": 500,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2023-商品-利润-profit",
    "__DimGroup__": "2023-商品-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 40,
    "__OriginalData__": {
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "商品",
    },
    "date": "2023",
    "profit": 40,
    "type": "商品",
  },
  {
    "__DimGroupID__": "2019-家具-销售额-sales",
    "__DimGroup__": "2019-家具-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 100,
    "__OriginalData__": {
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "家具",
    },
    "date": "2019",
    "sales": 100,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2019-家具-利润-profit",
    "__DimGroup__": "2019-家具-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 10,
    "__OriginalData__": {
      "date": "2019",
      "profit": 10,
      "sales": 100,
      "type": "家具",
    },
    "date": "2019",
    "profit": 10,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2020-家具-销售额-sales",
    "__DimGroup__": "2020-家具-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 3200,
    "__OriginalData__": {
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "家具",
    },
    "date": "2020",
    "sales": 3200,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2020-家具-利润-profit",
    "__DimGroup__": "2020-家具-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2020",
      "profit": 30,
      "sales": 3200,
      "type": "家具",
    },
    "date": "2020",
    "profit": 30,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2021-家具-销售额-sales",
    "__DimGroup__": "2021-家具-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 300,
    "__OriginalData__": {
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "家具",
    },
    "date": "2021",
    "sales": 300,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2021-家具-利润-profit",
    "__DimGroup__": "2021-家具-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "date": "2021",
      "profit": 30,
      "sales": 300,
      "type": "家具",
    },
    "date": "2021",
    "profit": 30,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2022-家具-销售额-sales",
    "__DimGroup__": "2022-家具-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 2400,
    "__OriginalData__": {
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "家具",
    },
    "date": "2022",
    "sales": 2400,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2022-家具-利润-profit",
    "__DimGroup__": "2022-家具-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 50,
    "__OriginalData__": {
      "date": "2022",
      "profit": 50,
      "sales": 2400,
      "type": "家具",
    },
    "date": "2022",
    "profit": 50,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2023-家具-销售额-sales",
    "__DimGroup__": "2023-家具-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 500,
    "__OriginalData__": {
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "家具",
    },
    "date": "2023",
    "sales": 500,
    "type": "家具",
  },
  {
    "__DimGroupID__": "2023-家具-利润-profit",
    "__DimGroup__": "2023-家具-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 40,
    "__OriginalData__": {
      "date": "2023",
      "profit": 40,
      "sales": 500,
      "type": "家具",
    },
    "date": "2023",
    "profit": 40,
    "type": "家具",
  },
]
`;

exports[`dataReshape > 5dimensions 3measure 1`] = `
[
  {
    "__DimGroupID__": "2022-中国-办公用品-东北-小型企业-销售额-sales",
    "__DimGroup__": "2022-中国-办公用品-东北-小型企业-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 213,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 11126.5,
      "date": "2022",
      "profit": 54865.44,
      "region": "中国",
      "sales": 213,
      "type": "小型企业",
    },
    "area": "东北",
    "category": "办公用品",
    "date": "2022",
    "region": "中国",
    "sales": 213,
    "type": "小型企业",
  },
  {
    "__DimGroupID__": "2022-中国-办公用品-东北-小型企业-利润-profit",
    "__DimGroup__": "2022-中国-办公用品-东北-小型企业-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 54865.44,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 11126.5,
      "date": "2022",
      "profit": 54865.44,
      "region": "中国",
      "sales": 213,
      "type": "小型企业",
    },
    "area": "东北",
    "category": "办公用品",
    "date": "2022",
    "profit": 54865.44,
    "region": "中国",
    "type": "小型企业",
  },
  {
    "__DimGroupID__": "2022-中国-办公用品-东北-小型企业-开销-cost",
    "__DimGroup__": "2022-中国-办公用品-东北-小型企业-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 11126.5,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 11126.5,
      "date": "2022",
      "profit": 54865.44,
      "region": "中国",
      "sales": 213,
      "type": "小型企业",
    },
    "area": "东北",
    "category": "办公用品",
    "cost": 11126.5,
    "date": "2022",
    "region": "中国",
    "type": "小型企业",
  },
  {
    "__DimGroupID__": "2022-中国-办公用品-东北-公司-销售额-sales",
    "__DimGroup__": "2022-中国-办公用品-东北-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 409,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 3010.06,
      "date": "2022",
      "profit": 67674.8,
      "region": "中国",
      "sales": 409,
      "type": "公司",
    },
    "area": "东北",
    "category": "办公用品",
    "date": "2022",
    "region": "中国",
    "sales": 409,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2022-中国-办公用品-东北-公司-利润-profit",
    "__DimGroup__": "2022-中国-办公用品-东北-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 67674.8,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 3010.06,
      "date": "2022",
      "profit": 67674.8,
      "region": "中国",
      "sales": 409,
      "type": "公司",
    },
    "area": "东北",
    "category": "办公用品",
    "date": "2022",
    "profit": 67674.8,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2022-中国-办公用品-东北-公司-开销-cost",
    "__DimGroup__": "2022-中国-办公用品-东北-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 3010.06,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 3010.06,
      "date": "2022",
      "profit": 67674.8,
      "region": "中国",
      "sales": 409,
      "type": "公司",
    },
    "area": "东北",
    "category": "办公用品",
    "cost": 3010.06,
    "date": "2022",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2022-中国-办公用品-中南-小型企业-销售额-sales",
    "__DimGroup__": "2022-中国-办公用品-中南-小型企业-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 324,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 13903.23,
      "date": "2022",
      "profit": 69494.43,
      "region": "中国",
      "sales": 324,
      "type": "小型企业",
    },
    "area": "中南",
    "category": "办公用品",
    "date": "2022",
    "region": "中国",
    "sales": 324,
    "type": "小型企业",
  },
  {
    "__DimGroupID__": "2022-中国-办公用品-中南-小型企业-利润-profit",
    "__DimGroup__": "2022-中国-办公用品-中南-小型企业-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 69494.43,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 13903.23,
      "date": "2022",
      "profit": 69494.43,
      "region": "中国",
      "sales": 324,
      "type": "小型企业",
    },
    "area": "中南",
    "category": "办公用品",
    "date": "2022",
    "profit": 69494.43,
    "region": "中国",
    "type": "小型企业",
  },
  {
    "__DimGroupID__": "2022-中国-办公用品-中南-小型企业-开销-cost",
    "__DimGroup__": "2022-中国-办公用品-中南-小型企业-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 13903.23,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 13903.23,
      "date": "2022",
      "profit": 69494.43,
      "region": "中国",
      "sales": 324,
      "type": "小型企业",
    },
    "area": "中南",
    "category": "办公用品",
    "cost": 13903.23,
    "date": "2022",
    "region": "中国",
    "type": "小型企业",
  },
  {
    "__DimGroupID__": "2022-中国-家具-中南-小型企业-销售额-sales",
    "__DimGroup__": "2022-中国-家具-中南-小型企业-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 156,
    "__OriginalData__": {
      "area": "中南",
      "category": "家具",
      "cost": 25954.31,
      "date": "2022",
      "profit": 101600.79,
      "region": "中国",
      "sales": 156,
      "type": "小型企业",
    },
    "area": "中南",
    "category": "家具",
    "date": "2022",
    "region": "中国",
    "sales": 156,
    "type": "小型企业",
  },
  {
    "__DimGroupID__": "2022-中国-家具-中南-小型企业-利润-profit",
    "__DimGroup__": "2022-中国-家具-中南-小型企业-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 101600.79,
    "__OriginalData__": {
      "area": "中南",
      "category": "家具",
      "cost": 25954.31,
      "date": "2022",
      "profit": 101600.79,
      "region": "中国",
      "sales": 156,
      "type": "小型企业",
    },
    "area": "中南",
    "category": "家具",
    "date": "2022",
    "profit": 101600.79,
    "region": "中国",
    "type": "小型企业",
  },
  {
    "__DimGroupID__": "2022-中国-家具-中南-小型企业-开销-cost",
    "__DimGroup__": "2022-中国-家具-中南-小型企业-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 25954.31,
    "__OriginalData__": {
      "area": "中南",
      "category": "家具",
      "cost": 25954.31,
      "date": "2022",
      "profit": 101600.79,
      "region": "中国",
      "sales": 156,
      "type": "小型企业",
    },
    "area": "中南",
    "category": "家具",
    "cost": 25954.31,
    "date": "2022",
    "region": "中国",
    "type": "小型企业",
  },
  {
    "__DimGroupID__": "2022-中国-家具-东北-公司-销售额-sales",
    "__DimGroup__": "2022-中国-家具-东北-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 158,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 6270.42,
      "date": "2022",
      "profit": 115925.85,
      "region": "中国",
      "sales": 158,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "date": "2022",
    "region": "中国",
    "sales": 158,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2022-中国-家具-东北-公司-利润-profit",
    "__DimGroup__": "2022-中国-家具-东北-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 115925.85,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 6270.42,
      "date": "2022",
      "profit": 115925.85,
      "region": "中国",
      "sales": 158,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "date": "2022",
    "profit": 115925.85,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2022-中国-家具-东北-公司-开销-cost",
    "__DimGroup__": "2022-中国-家具-东北-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 6270.42,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 6270.42,
      "date": "2022",
      "profit": 115925.85,
      "region": "中国",
      "sales": 158,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "cost": 6270.42,
    "date": "2022",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2022-中国-办公用品-中南-公司-销售额-sales",
    "__DimGroup__": "2022-中国-办公用品-中南-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 615,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 24766.78,
      "date": "2022",
      "profit": 144334.2,
      "region": "中国",
      "sales": 615,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "date": "2022",
    "region": "中国",
    "sales": 615,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2022-中国-办公用品-中南-公司-利润-profit",
    "__DimGroup__": "2022-中国-办公用品-中南-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 144334.2,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 24766.78,
      "date": "2022",
      "profit": 144334.2,
      "region": "中国",
      "sales": 615,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "date": "2022",
    "profit": 144334.2,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2022-中国-办公用品-中南-公司-开销-cost",
    "__DimGroup__": "2022-中国-办公用品-中南-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 24766.78,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 24766.78,
      "date": "2022",
      "profit": 144334.2,
      "region": "中国",
      "sales": 615,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "cost": 24766.78,
    "date": "2022",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-销售额-sales",
    "__DimGroup__": "2023-中国-家具-东北-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 56,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 6550.89,
      "date": "2023",
      "profit": 41296.65,
      "region": "中国",
      "sales": 56,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "date": "2023",
    "region": "中国",
    "sales": 56,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-利润-profit",
    "__DimGroup__": "2023-中国-家具-东北-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 41296.65,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 6550.89,
      "date": "2023",
      "profit": 41296.65,
      "region": "中国",
      "sales": 56,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "date": "2023",
    "profit": 41296.65,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-开销-cost",
    "__DimGroup__": "2023-中国-家具-东北-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 6550.89,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 6550.89,
      "date": "2023",
      "profit": 41296.65,
      "region": "中国",
      "sales": 56,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "cost": 6550.89,
    "date": "2023",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-中南-公司-销售额-sales",
    "__DimGroup__": "2023-中国-办公用品-中南-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 108,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 8001.42,
      "date": "2023",
      "profit": 30842,
      "region": "中国",
      "sales": 108,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "date": "2023",
    "region": "中国",
    "sales": 108,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-中南-公司-利润-profit",
    "__DimGroup__": "2023-中国-办公用品-中南-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 30842,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 8001.42,
      "date": "2023",
      "profit": 30842,
      "region": "中国",
      "sales": 108,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "date": "2023",
    "profit": 30842,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-中南-公司-开销-cost",
    "__DimGroup__": "2023-中国-办公用品-中南-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 8001.42,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 8001.42,
      "date": "2023",
      "profit": 30842,
      "region": "中国",
      "sales": 108,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "cost": 8001.42,
    "date": "2023",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-东北-公司-销售额-sales",
    "__DimGroup__": "2023-中国-办公用品-东北-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 49,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 1870.23,
      "date": "2023",
      "profit": 7817.57,
      "region": "中国",
      "sales": 49,
      "type": "公司",
    },
    "area": "东北",
    "category": "办公用品",
    "date": "2023",
    "region": "中国",
    "sales": 49,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-东北-公司-利润-profit",
    "__DimGroup__": "2023-中国-办公用品-东北-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 7817.57,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 1870.23,
      "date": "2023",
      "profit": 7817.57,
      "region": "中国",
      "sales": 49,
      "type": "公司",
    },
    "area": "东北",
    "category": "办公用品",
    "date": "2023",
    "profit": 7817.57,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-东北-公司-开销-cost",
    "__DimGroup__": "2023-中国-办公用品-东北-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 1870.23,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 1870.23,
      "date": "2023",
      "profit": 7817.57,
      "region": "中国",
      "sales": 49,
      "type": "公司",
    },
    "area": "东北",
    "category": "办公用品",
    "cost": 1870.23,
    "date": "2023",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-中南-公司-销售额-sales",
    "__DimGroup__": "2023-中国-办公用品-中南-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 44,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 684.6,
      "date": "2023",
      "profit": 4901.82,
      "region": "中国",
      "sales": 44,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "date": "2023",
    "region": "中国",
    "sales": 44,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-中南-公司-利润-profit",
    "__DimGroup__": "2023-中国-办公用品-中南-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 4901.82,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 684.6,
      "date": "2023",
      "profit": 4901.82,
      "region": "中国",
      "sales": 44,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "date": "2023",
    "profit": 4901.82,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-中南-公司-开销-cost",
    "__DimGroup__": "2023-中国-办公用品-中南-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 684.6,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 684.6,
      "date": "2023",
      "profit": 4901.82,
      "region": "中国",
      "sales": 44,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "cost": 684.6,
    "date": "2023",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-中南-公司-销售额-sales",
    "__DimGroup__": "2023-中国-家具-中南-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 18,
    "__OriginalData__": {
      "area": "中南",
      "category": "家具",
      "cost": 4949.01,
      "date": "2023",
      "profit": 27387.23,
      "region": "中国",
      "sales": 18,
      "type": "公司",
    },
    "area": "中南",
    "category": "家具",
    "date": "2023",
    "region": "中国",
    "sales": 18,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-中南-公司-利润-profit",
    "__DimGroup__": "2023-中国-家具-中南-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 27387.23,
    "__OriginalData__": {
      "area": "中南",
      "category": "家具",
      "cost": 4949.01,
      "date": "2023",
      "profit": 27387.23,
      "region": "中国",
      "sales": 18,
      "type": "公司",
    },
    "area": "中南",
    "category": "家具",
    "date": "2023",
    "profit": 27387.23,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-中南-公司-开销-cost",
    "__DimGroup__": "2023-中国-家具-中南-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 4949.01,
    "__OriginalData__": {
      "area": "中南",
      "category": "家具",
      "cost": 4949.01,
      "date": "2023",
      "profit": 27387.23,
      "region": "中国",
      "sales": 18,
      "type": "公司",
    },
    "area": "中南",
    "category": "家具",
    "cost": 4949.01,
    "date": "2023",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-销售额-sales",
    "__DimGroup__": "2023-中国-家具-东北-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 6,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 771.68,
      "date": "2023",
      "profit": 3677.8,
      "region": "中国",
      "sales": 6,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "date": "2023",
    "region": "中国",
    "sales": 6,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-利润-profit",
    "__DimGroup__": "2023-中国-家具-东北-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 3677.8,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 771.68,
      "date": "2023",
      "profit": 3677.8,
      "region": "中国",
      "sales": 6,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "date": "2023",
    "profit": 3677.8,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-开销-cost",
    "__DimGroup__": "2023-中国-家具-东北-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 771.68,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 771.68,
      "date": "2023",
      "profit": 3677.8,
      "region": "中国",
      "sales": 6,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "cost": 771.68,
    "date": "2023",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-中南-公司-销售额-sales",
    "__DimGroup__": "2023-中国-家具-中南-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 64,
    "__OriginalData__": {
      "area": "中南",
      "category": "家具",
      "cost": 5600.13,
      "date": "2023",
      "profit": 32654.71,
      "region": "中国",
      "sales": 64,
      "type": "公司",
    },
    "area": "中南",
    "category": "家具",
    "date": "2023",
    "region": "中国",
    "sales": 64,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-中南-公司-利润-profit",
    "__DimGroup__": "2023-中国-家具-中南-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 32654.71,
    "__OriginalData__": {
      "area": "中南",
      "category": "家具",
      "cost": 5600.13,
      "date": "2023",
      "profit": 32654.71,
      "region": "中国",
      "sales": 64,
      "type": "公司",
    },
    "area": "中南",
    "category": "家具",
    "date": "2023",
    "profit": 32654.71,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-中南-公司-开销-cost",
    "__DimGroup__": "2023-中国-家具-中南-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 5600.13,
    "__OriginalData__": {
      "area": "中南",
      "category": "家具",
      "cost": 5600.13,
      "date": "2023",
      "profit": 32654.71,
      "region": "中国",
      "sales": 64,
      "type": "公司",
    },
    "area": "中南",
    "category": "家具",
    "cost": 5600.13,
    "date": "2023",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-销售额-sales",
    "__DimGroup__": "2023-中国-家具-东北-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 196,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 11458.21,
      "date": "2023",
      "profit": 133046.81,
      "region": "中国",
      "sales": 196,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "date": "2023",
    "region": "中国",
    "sales": 196,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-利润-profit",
    "__DimGroup__": "2023-中国-家具-东北-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 133046.81,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 11458.21,
      "date": "2023",
      "profit": 133046.81,
      "region": "中国",
      "sales": 196,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "date": "2023",
    "profit": 133046.81,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-开销-cost",
    "__DimGroup__": "2023-中国-家具-东北-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 11458.21,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 11458.21,
      "date": "2023",
      "profit": 133046.81,
      "region": "中国",
      "sales": 196,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "cost": 11458.21,
    "date": "2023",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-东北-公司-销售额-sales",
    "__DimGroup__": "2023-中国-办公用品-东北-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 7,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 2877.7,
      "date": "2023",
      "profit": 9820.3,
      "region": "中国",
      "sales": 7,
      "type": "公司",
    },
    "area": "东北",
    "category": "办公用品",
    "date": "2023",
    "region": "中国",
    "sales": 7,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-东北-公司-利润-profit",
    "__DimGroup__": "2023-中国-办公用品-东北-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 9820.3,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 2877.7,
      "date": "2023",
      "profit": 9820.3,
      "region": "中国",
      "sales": 7,
      "type": "公司",
    },
    "area": "东北",
    "category": "办公用品",
    "date": "2023",
    "profit": 9820.3,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-东北-公司-开销-cost",
    "__DimGroup__": "2023-中国-办公用品-东北-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 2877.7,
    "__OriginalData__": {
      "area": "东北",
      "category": "办公用品",
      "cost": 2877.7,
      "date": "2023",
      "profit": 9820.3,
      "region": "中国",
      "sales": 7,
      "type": "公司",
    },
    "area": "东北",
    "category": "办公用品",
    "cost": 2877.7,
    "date": "2023",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-中南-公司-销售额-sales",
    "__DimGroup__": "2023-中国-办公用品-中南-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 30,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 767.03,
      "date": "2023",
      "profit": 3769.75,
      "region": "中国",
      "sales": 30,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "date": "2023",
    "region": "中国",
    "sales": 30,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-中南-公司-利润-profit",
    "__DimGroup__": "2023-中国-办公用品-中南-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 3769.75,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 767.03,
      "date": "2023",
      "profit": 3769.75,
      "region": "中国",
      "sales": 30,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "date": "2023",
    "profit": 3769.75,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-办公用品-中南-公司-开销-cost",
    "__DimGroup__": "2023-中国-办公用品-中南-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 767.03,
    "__OriginalData__": {
      "area": "中南",
      "category": "办公用品",
      "cost": 767.03,
      "date": "2023",
      "profit": 3769.75,
      "region": "中国",
      "sales": 30,
      "type": "公司",
    },
    "area": "中南",
    "category": "办公用品",
    "cost": 767.03,
    "date": "2023",
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-销售额-sales",
    "__DimGroup__": "2023-中国-家具-东北-公司-销售额",
    "__MeaId__": "sales",
    "__MeaName__": "销售额",
    "__MeaValue__": 158,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 6270.42,
      "date": "2023",
      "profit": 115925.85,
      "region": "中国",
      "sales": 158,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "date": "2023",
    "region": "中国",
    "sales": 158,
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-利润-profit",
    "__DimGroup__": "2023-中国-家具-东北-公司-利润",
    "__MeaId__": "profit",
    "__MeaName__": "利润",
    "__MeaValue__": 115925.85,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 6270.42,
      "date": "2023",
      "profit": 115925.85,
      "region": "中国",
      "sales": 158,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "date": "2023",
    "profit": 115925.85,
    "region": "中国",
    "type": "公司",
  },
  {
    "__DimGroupID__": "2023-中国-家具-东北-公司-开销-cost",
    "__DimGroup__": "2023-中国-家具-东北-公司-开销",
    "__MeaId__": "cost",
    "__MeaName__": "开销",
    "__MeaValue__": 6270.42,
    "__OriginalData__": {
      "area": "东北",
      "category": "家具",
      "cost": 6270.42,
      "date": "2023",
      "profit": 115925.85,
      "region": "中国",
      "sales": 158,
      "type": "公司",
    },
    "area": "东北",
    "category": "家具",
    "cost": 6270.42,
    "date": "2023",
    "region": "中国",
    "type": "公司",
  },
]
`;
